trying to fix mobile-scroll-flickering due to url bar and vh units

--- a/css/style.css
+++ b/css/style.css
@@ -530,8 +530,7 @@ nav .dropdown-content li > a:focus {
   color: #26a69a;
 }
 
-.parallax-container {
-  height: auto;
+.parallax-container {  
   min-height: 100%;  
   top: -64px;
   margin-bottom: -64px;
